--- a/.github/workflows/master_mindfullearn.yml
+++ b/.github/workflows/master_mindfullearn.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm start --if-present
+          npm run start --if-present
         
 
       - name: Zip artifact for deployment
