--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0"
+
   }
 }
